--- a/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block menu-title %}List Outlet Client{% endblock %}
 {% load django_tables2 %}
 {% load bootstrap_pagination %}
 {% load crispy_forms_tags %}
 
+{% block menu-title %}List Outlet Client{% endblock %}
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
@@ -32,12 +32,13 @@
                     <div class="row">
                         <div class="d-inline">
                             <a href="{% url 'clients:list_client'  %}" class="d-inline"><i class="fa fa-arrow-left"
-                                aria-hidden="true"></i></a>
+                                    aria-hidden="true"></i></a>
                             <h5 class="font-weight-bolder d-inline p-lg-2">{{ name.name }}'s Outlets</h5>
                         </div>
                         <div class="d-inline">
-                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info mt-2">Add Outlet</a>
-                        </div> 
+                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info mt-2">Add
+                                Outlet</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -46,11 +47,16 @@
                     <table class="table table-sm" id="table1">
                         <thead>
                             <tr>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">Outlet Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end" style="width: 13%;">Phone</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 30%;">Address</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 17%;">Sales Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-center" style="width: 20%;">Action</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">
+                                    Outlet Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end"
+                                    style="width: 13%;">Phone</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 30%;">
+                                    Address</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 17%;">
+                                    Sales Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-center"
+                                    style="width: 20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -69,11 +75,14 @@
                                     <p class="text-xs font-weight-bold mb-0 text-start">{{ data.client.user.name }}</p>
                                 </td>
                                 <td class="text-center">
-                                    <a href="{% url 'clients:update_outlet_client' data.id %}" class="btn btn-sm bg-warning text-white text-xs">Edit</a>
-                                    <form class="d-inline" id="form-id" action="{% url 'clients:delete_outlet' data.id %}" method="post">
+                                    <a href="{% url 'clients:update_outlet_client' data.id %}"
+                                        class="btn btn-sm bg-warning text-white text-xs">Edit</a>
+                                    <form class="d-inline" id="form-id"
+                                        action="{% url 'clients:delete_outlet' data.id %}" method="post">
                                         {% csrf_token %}
                                         </a>
-                                        <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
+                                        <button type="submit"
+                                            class="btn btn-sm bg-danger btn-flat show_confirm text-white"
                                             data-toggle="tooltip" title='Delete'>Delete</button>
                                     </form>
                                 </td>
