--- a/kawn_subscriptions_manager/templates/partials/footer.html
+++ b/kawn_subscriptions_manager/templates/partials/footer.html
@@ -8,8 +8,8 @@
                         document.write(new Date().getFullYear())
                     </script>,
                     made by
-                    <a href="https://indosterlingtechnomedia.com/our-product/kawn/" class="font-weight-bold" target="_blank">PT. Technomedia Multi
-                        Sejahtera</a>
+                    <a href="https://indosterlingtechnomedia.com/our-product/kawn/" class="font-weight-bold"
+                        target="_blank">PT. Technomedia Multi Sejahtera</a>
                 </div>
             </div>
             <div class="col-lg-6">
