--- a/kawn_subscriptions_manager/templates/subscriptions/detail_approval.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/detail_approval.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load humanize %}
 
 {% block menu-title %}Detail Subscriptions{% endblock %}
-{% block listclientsubscriptions-active %}active{% endblock %}
-
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
@@ -29,8 +28,10 @@
                                 aria-hidden="true">&times;</span></button>
                     </div>
                     {% endfor %}
-                    <div class="align-middle">
-                        <h5 class="font-weight-bolder">Subscription Information</h5>
+                    <div class="align-middle d-inline">
+                        <a href="{% url 'subscriptions:list_approval'%}" class="d-inline"><i class="fa fa-arrow-left"
+                            aria-hidden="true"></i></a>
+                        <h5 class="font-weight-bolder d-inline">Subscription Information</h5>
                     </div>
                 </div>
             </div>
@@ -72,7 +73,7 @@
                                         <td><span class="text-dark font-weight-bold ms-sm-2">Rp {{ object.subscriptionplan.price|intcomma }}</span></td>
                                     </tr>
                                     <tr>
-                                        <td><span class="mb-2">Amount</span></td>
+                                        <td><span class="mb-2">Amount Paid</span></td>
                                         <td> : </td>
                                         <td><span class="text-dark font-weight-bold ms-sm-2">Rp {{ object.billing.orderpayment.amount|intcomma }}</span></td>
                                     </tr>
