--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load humanize %}
 {% load crispy_forms_tags %}
 
 {% block menu-title %}List User Subscriptions{% endblock %}
-{% block listclientsubscriptions-active %}active{% endblock %}
 
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription</a></li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription</a></li>
+  </ol>
 </nav>
 {% endblock breadcrumbs %}
 
@@ -34,10 +34,12 @@
           </div>
 
           <div class="col-lg-12 mb-4 mt-2">
-            <button type="button" class="btn bg-gradient-dark align-middle col-md-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn bg-gradient-dark align-middle col-md-2" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               Advanced Search
             </button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -83,11 +85,15 @@
                 <thead>
                   <tr>
                     <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 23%;">Outlet Name</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription Plan</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing Date</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired Date</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription
+                      Plan</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing
+                      Date</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired
+                      Date</th>
                     <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13%;">Status</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 16%;">Action</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 16%;">
+                      Action</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -113,7 +119,8 @@
                       {% endif%}
                     </td>
                     <td class="align-middle text-center px-4">
-                      <a href="{% url 'subscriptions:detail_subscription' data.id %}" class="btn btn-sm bg-gradient-faded-info text-white text-xs">
+                      <a href="{% url 'subscriptions:detail_subscription' data.id %}"
+                        class="btn btn-sm bg-gradient-faded-info text-white text-xs">
                         Detail
                       </a>
                     </td>
