--- a/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load humanize %}
 {% load crispy_forms_tags %}
 
 {% block menu-title %}List User Subscriptions{% endblock %}
-{% block listclientsubscriptions-active %}active{% endblock %}
-
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription</a></li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription</a></li>
+  </ol>
 </nav>
 {% endblock breadcrumbs %}
 
@@ -35,14 +34,16 @@
           </div>
 
           <div class="col-lg-12 mb-4 mt-2">
-            <div class="align-middle">  
+            <div class="align-middle">
               <a href="{% url 'subscriptions:add_subscription' %}" class="btn bg-gradient-info col-md-2 mt-2">
                 Add Subscription
               </a>
-              <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
                 Advanced Search
               </button>
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -88,11 +89,15 @@
               <thead>
                 <tr>
                   <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 22%;">Outlet Name</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription Plan</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing Date</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription Plan
+                  </th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing
+                    Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired
+                    Date</th>
                   <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Status</th>
-                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder" style="width: 20%;">Action</th>
+                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder" style="width: 20%;">Action
+                  </th>
                 </tr>
               </thead>
               <tbody>
@@ -119,10 +124,11 @@
                   </td>
                   <td class="align-middle text-center px-4">
                     {% if data.active == True and data.is_approved is not None %}
-                    <a href="{% url 'subscriptions:sales_deactivate_subscription' data.id %}"
+                    <a href="{% url 'subscriptions:deactivate_subscription' data.id %}"
                       class="btn btn-sm bg-danger text-white text-xs">Deactivate</a>
                     {% elif data.active == False and data.is_approved is not None %}
-                    <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
+                    <a href="{% url 'subscriptions:activate_subscription' data.id %}"
+                      class="btn btn-sm bg-info text-white text-xs">Activate</a>
                     {% else %}
                     <p class="text-xs font-weight-bolder mb-0 text-center">Waiting for Approval</p>
                     {% endif %}
