--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -4,15 +4,14 @@
 {% load humanize %}
 {% load crispy_forms_tags %}
 
-{% block menu-title %}List Subscriptions Plan{% endblock %}
-{% block listsubscriptionplan-active %}active{% endblock %}
+{% block menu-title %}List Subscription Plans{% endblock %}
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
+  </ol>
 </nav>
 {% endblock breadcrumbs %}
 
@@ -31,11 +30,14 @@
         <div class="col-lg-12 mb-4 mt-2">
           <div class="align-middle">
             <h5 class="font-weight-bolder">Susbcription Plans</h5>
-            <a href="{% url 'subscriptions:add_subscription_plan' %}" class="btn bg-gradient-info mt-2">Add Susbcription Plans</a>
-            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <a href="{% url 'subscriptions:add_subscription_plan' %}" class="btn bg-gradient-info mt-2">Add Susbcription
+              Plans</a>
+            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               Advanced Search
             </button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -72,37 +74,6 @@
             </div>
           </div>
         </div>
-
-        {% comment %}
-        <div>
-          <h5 class="font-weight-bolder">Susbcription Plans</h5>
-          <a href="{% url 'subscriptions:add_subscription_plan' %}" class="btn bg-gradient-info mt-2">Add Subscriptions Plan</a>
-        </div>
-        <div class="col-lg-12 mb-4 mt-2">
-          <form method="get">
-            <div class="row">
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.trial_unit|as_crispy_field }}
-              </div>
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.recurrence_unit|as_crispy_field }}
-              </div>
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.is_active|as_crispy_field }}
-              </div>
-              <div class="col-md-4 mt-4">
-                <button class="btn bg-gradient-info mt-2 mb-0" type="submit">Filter</button>
-                <button class="btn bg-gradient-info mt-2 mb-0">
-                  <a href="{% url 'subscriptions:list_subscription_plan' %}" class="text-white">
-                    Clear Filter
-                  </a> style="width: 12.5%;"
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-        {% endcomment %}
-        
       </div>
       <div class="card-body">
         <div class="table-responsive p-0">
@@ -110,13 +81,17 @@
             <thead>
               <tr>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13.5%;">Name</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Trial Period</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Price</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Trial
+                  Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Price
+                </th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Trial Unit</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period
+                </th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Rec. Unit</th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Status</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 21.5%;">Action</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 21.5%;">Action
+                </th>
               </tr>
             </thead>
             <tbody>
@@ -126,7 +101,8 @@
                   <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
                 <td data-sort="{{ data.trial_period }}" class="px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month</p>
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month
+                  </p>
                 </td>
                 <td data-sort="{{ data.price }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-end">Rp{{ data.price|intcomma }}</p>
@@ -138,7 +114,8 @@
                   <p class="text-xs font-weight-bold mb-0 text-end">{{ data.recurrence_period|default_if_none:"-" }}</p>
                 </td>
                 <td class="px-4">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.get_recurrence_unit_display|default_if_none:"-" }}</p>
+                  <p class="text-xs font-weight-bold mb-0">{{ data.get_recurrence_unit_display|default_if_none:"-" }}
+                  </p>
                 </td>
                 <td class="px-4">
                   {% if data.is_active %}
@@ -164,8 +141,8 @@
                     action="{% url 'subscriptions:delete_subscription_plan' data.id %}" method="post">
                     {% csrf_token %}
                     </a>
-                    <button type="submit" class="btn btn-sm bg-danger show_confirm text-white text-xs" data-toggle="tooltip"
-                      title='Delete'>Delete</button>
+                    <button type="submit" class="btn btn-sm bg-danger show_confirm text-white text-xs"
+                      data-toggle="tooltip" title='Delete'>Delete</button>
                   </form>
                   {% endif %}
                 </td>
