--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %}
+
 {% load static %}
 {% load bootstrap_pagination %}
 {% load humanize %}
 {% load crispy_forms_tags %}
 
 {% block menu-title %}List Subscriptions Plan{% endblock %}
-{% block listsubscriptionplan-active %}active{% endblock %}
-
 
 {% block breadcrumbs %}
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a role="link" aria-disabled="true">Subscription Plans</a></li>
+  </ol>
 </nav>
 {% endblock breadcrumbs %}
 
@@ -29,14 +28,15 @@
               aria-hidden="true">&times;</span></button>
         </div>
         {% endfor %}
-        
         <div class="col-lg-12 mb-4 mt-2">
           <div class="align-middle">
             <h5 class="font-weight-bolder">Susbcription Plans</h5>
-            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal"
+              data-bs-target="#exampleModal">
               Advanced Search
             </button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -73,36 +73,6 @@
             </div>
           </div>
         </div>
-
-        {% comment %}
-        <div class="align-middle">
-          <h5 class="font-weight-bolder">Susbcription Plans</h5>
-        </div>
-        <div class="col-lg-12 mb-4 mt-2">
-          <form method="get">
-            <div class="row">
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.trial_unit|as_crispy_field }}
-              </div>
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.recurrence_unit|as_crispy_field }}
-              </div>
-              <div class="col-md-2">
-                {{ subscription_plan_filter.form.is_active|as_crispy_field }}
-              </div>
-              <div class="col-md-4 mt-4">
-                <button class="btn bg-gradient-info mt-2 mb-0" type="submit">Filter</button>
-                <button class="btn bg-gradient-info mt-2 mb-0">
-                  <a href="{% url 'subscriptions:list_subscription_plan' %}" class="text-white">
-                    Clear Filter
-                  </a>
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-        {% endcomment %}
-
       </div>
       <div class="card-body">
         <div class="table-responsive p-0">
@@ -110,10 +80,12 @@
             <thead>
               <tr>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 26%;">Name</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Trial Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Trial
+                  Period</th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 22%;">Price</th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Trial Unit</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period
+                </th>
                 <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Rec. Unit</th>
               </tr>
             </thead>
@@ -125,13 +97,15 @@
                   <p class="text-xs font-weight-bold mb-0">{{ data.name }}</p>
                 </td>
                 <td data-sort="{{ data.trial_period }}" class="px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month</p>
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.trial_period|default_if_none:"-" }} Month
+                  </p>
                 </td>
                 <td data-sort="{{ data.price }}" class="px-4">
                   <p class="text-xs text-end font-weight-bold mb-0">Rp {{ data.price|intcomma }}</p>
                 </td>
                 <td>
-                  <p class="text-xs font-weight-bold mb-0 ps-3">{{ data.get_trial_unit_display|default_if_none:"-" }}</p>
+                  <p class="text-xs font-weight-bold mb-0 ps-3">{{ data.get_trial_unit_display|default_if_none:"-" }}
+                  </p>
                 </td>
                 <td class="px-4">
                   <p class="text-xs font-weight-bold mb-0 ps-3 text-end">{{ data.recurrence_period|default_if_none:"-" }}</p>
