--- a/kawn_subscriptions_manager/templates/subscriptions/sales/form_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/form_subscription.html
@@ -12,7 +12,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="d-flex flex-column h-100">
-              <h5 class="font-weight-bolder">Formerterterterter Subscription</h5>
+              <h5 class="font-weight-bolder">Form Subscription</h5>
               <form method="post" novalidate>
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
@@ -36,15 +36,29 @@
 <script type="text/javascript">
   let data = JSON.parse("{{subscriptionplan|escapejs}}");
 
+  Date.prototype.addDays = function(days) {
+    var date = new Date(this.valueOf());
+    date.setDate(date.getDate() + days);
+    return date;
+  }
+  
+  var date = new Date();
+
   if (document.getElementById("id_add_subscription_form-subscriptionplan")) {
     document.getElementById("id_add_subscription_form-subscriptionplan").onchange = (e) => {
       let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
-      $('#id_add_billing_form-price').val(subscriptionplan.price)
+      var days = ((subscriptionplan.recurrence_period)*30)+30;
+      console.log(days)
+      document.getElementById("id_add_subscription_form-expires").max = (date.addDays(days)).toISOString().split("T")[0];
+      $('#id_add_billing_form-price').val(subscriptionplan.price);
     };
   } else {
     document.getElementById("id_activate_subscription_form-subscriptionplan").onchange = (e) => {
       let subscriptionplan = data.find(dataSubplan => dataSubplan.id == e.target.value);
-      $('#id_activate_billing_form-price').val(subscriptionplan.price)
+      $('#id_activate_billing_form-price').val(subscriptionplan.price);
+      var days = ((subscriptionplan.recurrence_period)*30)+30;
+      console.log(days)
+      document.getElementById("id_activate_subscription_form-expires").max = (date.addDays(days)).toISOString().split("T")[0];
     };
   }
 </script>
