--- a/kawn_subscriptions_manager/templates/partials/sidebar.html
+++ b/kawn_subscriptions_manager/templates/partials/sidebar.html
@@ -18,6 +18,7 @@
             <li class="nav-item mt-3">
                 <h6 class="ps-4 ms-2 text-uppercase font-weight-bolder">Main</h6>
             </li>
+            {% comment %}
             <li class="nav-item">
                 <a class="nav-link {% if link == 'home' %}active{% endif %}" href="/">
                     <div
@@ -27,6 +28,7 @@
                     <span class="nav-link-text ms-1">Dashboard</span>
                 </a>
             </li>
+            {% endcomment %}
             <li class="nav-item">
                 <a class="nav-link {% if link == 'clients:list_client' or link == 'clients:add_client' or link == 'clients:update_client' or link == 'clients:list_outlet_client' or link == 'clients:add_outlet_client' or link == 'clients:update_outlet_client'  %}active{% endif %}"
                     href="{% url 'clients:list_client'  %}">
@@ -72,6 +74,8 @@
             <li class="nav-item mt-3">
                 <h6 class="ps-4 ms-2 text-uppercase font-weight-bolder">Settings</h6>
             </li>
+
+            {% comment %}
             {% if request.user.type == "ADMIN" or request.user.type == "SUPERVISOR" %}
             <li class="nav-item">
                 <a class="nav-link  {% if link == 'subscriptions:subscription_logs' %}active{% endif %}"
@@ -84,6 +88,8 @@
                 </a>
             </li>
             {% endif %}
+            {% endcomment %}
+
             <li class="nav-item">
                 <a class="nav-link  {% if link == 'subscriptions:list_subscription_plan' or link == 'subscriptions:add_subscription_plan' or link == 'subscriptions:update_subscription_plan' %}active{% endif %}"
                     href="{% url 'subscriptions:list_subscription_plan'  %}">
@@ -116,7 +122,23 @@
                     <span class="nav-link-text ms-1">My Profile</span>
                 </a>
             </li>
+            {% if request.user.type == "ADMIN" or request.user.type == "SUPERVISOR" %}
+            <li class="nav-item mt-3">
+                <h6 class="ps-4 ms-2 text-uppercase font-weight-bolder">LOG</h6>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link  {% if link == 'subscriptions:activity_logs_created' or link == 'subscriptions:activity_logs_modified' %}active{% endif %}"
+                    href="{% url 'subscriptions:activity_logs_created' %}">
+                    <div
+                        class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <i class="fa-solid fa-box-archive"></i>
+                    </div>
+                    <span class="nav-link-popeo ms-1">Activity Logs</span>
+                </a>
+            </li>
+            {% endif %}
             {% endwith %}
+            
         </ul>
     </div>
 </aside>
